--- a/my-app/src/Components/Navigation/Navigation.module.css
+++ b/my-app/src/Components/Navigation/Navigation.module.css
@@ -1,8 +1,13 @@
 .navbar {
     background-color: chocolate;
     grid-area: n;
-    padding: 20px 0px 0px 20px;
+    padding: 20px;
 }
 .link {
-    color: green;
+    color: white;
+    text-decoration: none;
+}
+.active {
+    color: gold;
+    text-decoration: none;
 }
