added state les 29

--- a/my-app/src/Components/Dialogs/Dialogs.module.css
+++ b/my-app/src/Components/Dialogs/Dialogs.module.css
@@ -2,10 +2,10 @@
     display: grid;
     grid-template-columns: 2fr 10fr;
     background: gray;
-    height: 700px;
+    height: 800px;
 }
 .dialogItem {
-    padding: 20px;
+    margin: 20px;
 }
 .messages {
     padding: 20px;
