--- a/my-app/src/Components/Navigation/Navigation.module.css
+++ b/my-app/src/Components/Navigation/Navigation.module.css
@@ -1,7 +1,7 @@
 .navbar {
     background-color: chocolate;
     grid-area: n;
-    padding: 20px;
+    height: 800px;
 }
 .link {
     color: white;
