--- a/my-app/src/Components/Navigation/SideBar/Friend/FriendItem.module.css
+++ b/my-app/src/Components/Navigation/SideBar/Friend/FriendItem.module.css
@@ -8,15 +8,19 @@
 .free {
     color: black;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
 }
-.dialogAvatar {
+.friendAvatar {
     width: 50px;
     height: 50px;
     border-radius: 30px;
     border: steelblue;
     border-style: solid;
 }
-.dialog {
+.friend {
     display: flex;
+    flex-direction: column;
     margin: 10px;
 }
