--- a/my-app/src/Components/Users/Users.module.css
+++ b/my-app/src/Components/Users/Users.module.css
@@ -4,3 +4,12 @@
 .selectPage {
     font-weight: bold;
 }
+
+.butnArrow button {
+    width: 50px;
+    margin: 0px 10px 0px 10px;
+}
+.paginatorFlex {
+    display: flex;
+    margin: 10px;
+}
