--- a/my-app/src/Components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/my-app/src/Components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -10,3 +10,12 @@
 .wrapper img {
     width: 300px;
 }
+.lookFor {
+    color: green;
+}
+.notLookFor {
+    color: red;
+}
+.btnSettings {
+    height: 50px;
+}
