--- a/my-app/src/Components/Header/Header.module.css
+++ b/my-app/src/Components/Header/Header.module.css
@@ -3,15 +3,18 @@
     background-color: darkkhaki;
     grid-area: h;
     align-items: center;
-    justify-content: start;
+    justify-content: space-around;
+    width: 100%;
 }
 .logo {
     width: 60px;
     height: 50px;
 }
 .text {
-    display: flex;
+    display: block;
     text-align: center;
-    justify-self: center;
     padding-left: 20px;
+}
+.nikName {
+    font-weight: 900;
 }
